# structfield_metadata

./: Cargo.toml  LICENSE  README.md
proc-macro/: Cargo.toml
proc-macro/src/: lib.rs
proc-macro/src/attr/: mod.rs  struct_level.rs
src/: lib.rs
tests/: declarative_macros.rs  proc_macros.rs
