[package]
name = "metadata_macro"
version = "0.1.1"
edition = "2024"
authors = [ "EndermanbugZJFC <endermanbugzjfc@gmail.com>" ]
description = "Rust macros for a very elementary metadata-like system in structs and tuple structs."
license = "LGPL-3.0-only"
repository = "https://github.com/Ezjfc/metadata_macro"
