[package]
name = "metadata_macro"
version = "0.1.2"
edition = "2024"
authors = [ "EndermanbugZJFC <endermanbugzjfc@gmail.com>" ]
description = "Rust macros for a very elementary metadata-like system in structs and tuple structs."
license = "LGPL-3.0-only"
repository = "https://github.com/Ezjfc/metadata_macro"

[workspace]
members = [
  ".",
  "proc-macro",
]

[features]
advanced-tests = [ "dep:clap" ]

[profile.dev]
features = [ "advanced-tests" ]

[dependencies]
clap = { version = "4.5.53", features = ["derive"], optional = true }
